kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: d2-live
  labels:
    name: d2-live
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
