kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d2-live
  namespace: d2-live
spec:
  selector:
    matchLabels:
      app: d2-live
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: d2-live
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: d2-live
        image: ghcr.io/oberwager/d2-live:latest
        ports:
        - name: web
          containerPort: 8090
        readinessProbe:
          httpGet:
            path: /info
            port: 8090
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          seccompProfile:
            type: RuntimeDefault
