kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d2-live-ingress
  namespace: d2-live
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - d2.lucas.tools
    secretName: d2-tls
  rules:
  - host: d2.lucas.tools
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: d2-live
            port:
              name: web
  - host: d2.argus.lucas.tools
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: d2-live
            port:
              name: web
